[gd_scene load_steps=6 format=3 uid="uid://pqdopojvvp3x"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_tgux8"]
[ext_resource type="Texture2D" uid="uid://dy0c86pihjimm" path="res://assets/250x250_placeholder.png" id="1_xaawh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esru2"]
size = Vector2(250.37, 254.063)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8yxi"]
size = Vector2(3809, 317)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxy8t"]
size = Vector2(675, 84)

[node name="Boss" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 2
motion_mode = 1
script = ExtResource("1_tgux8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.716, 3.264)
texture = ExtResource("1_xaawh")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(2.7, 3.2)
shape = SubResource("RectangleShape2D_esru2")

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(-2244.5, -0.5)
shape = SubResource("RectangleShape2D_v8yxi")
debug_color = Color(0.984314, 0, 0, 0.419608)

[node name="StompArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(0, -449)
shape = SubResource("RectangleShape2D_jxy8t")
debug_color = Color(0, 0.636242, 0.407339, 0.42)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="PhaseDuration" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
